feature: constant/controller and update service/dto/entity/repository/mapper/controller/exception and update application,yaml